Configuration: stop adding gc logging option to JVM by default
After considering fixing the "Permission Denied" print that is
triggered with every call to one of the java tools. It was
decided it is best to loose of not logging the JVM GC by default
at all.
The log has little to none value to us since we are not running
the actual cassandra server where it might have been of value
if it crashes.
If a developer/user still needs those logs he can add it as a
parameter to the JVM_OPTS environment variable.
For the discussion and previous proposed solution see:
https://github.com/scylladb/scylla-tools-java/pull/153